--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "next": "^14.2.5",
     "papaparse": "^5.4.1",
     "pdf-parse": "^1.1.4",
+    "pdfjs-dist": "^4.2.67",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.15.4",
     "resend": "^3.2.0",
     "zod": "^3.23.8"
   },
