--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "@types/pdfkit": "^0.17.5",
     "next": "^16.0.0",
     "papaparse": "^5.4.1",
     "pdf-parse": "^1.1.4",
     "pdfjs-dist": "^4.2.67",
+    "pdfkit": "^0.17.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "resend": "^3.2.0",
